# machadoah.github.io

./: .gitignore  README.md  index.html  main.py  marmite.yaml  mkdocs.yml  nuxt.config.js  package-lock.json  package.json  pyproject.toml  rascunho.txt  requirements.txt  vercel.json
.github/workflows/: main.yaml
assets/styles/: main.css
content/: 2000-00-00-template.md  2025-08-31-hello-world.md  2025-08-31-introducao-estatistica.md  2025-08-31-types-e-type-hints-python.md  2025-09-01-data-structures-python copy.md  2025-09-09-cultura-mlops-dataops.md  about.md  hello-world.md  me.md
content/fastapi/: 2025-09-26-introducao-fastapi copy.md  2025-09-27-parametros-em-fastapi.md
content/ia-ml/cultura-mlops/: 2025-09-09-cultura-devops.md  2025-09-30-cultura-mlops-dataops.md
content/sw/fastapi/: 2025-09-26-introducao-fastapi copy.md  2025-09-26-introducao-fastapi.md  2025-09-27-parametros-em-fastapi.md  2025-09-27-setup-inicial.md
docs/: educacao.md  experiencias.md  habilidades.md  index.md
pages/: index.vue
site/: 404.html  index.html  sitemap.xml
site/educacao/: index.html
site/experiencias/: index.html
site/habilidades/: index.html
site/search/: search_index.json
styles/: custom.css
