[project]
name = "machadoah-github-io"
version = "0.1.0"
description = "My personal website and blog"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "marmite>=0.2.6",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
generate = "uv run marmite . -v" # Generate ./site static files
serve = "uv run marmite . --serve --watch" # Serve ./site static files with live reload
build = "uv run marmite . .site --debug" # Deploy ./site static files to GitHub Pages